example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vscode-service
spec:
  selector:
    app: vscode-deployment
  ports:
    - name: vscode-port
      port: 80
      targetPort: 8080
