example/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vscode-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - example.demo.dev.sspcloud.fr
  rules:
    - host: example.demo.dev.sspcloud.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: vscode-service
              servicePort: vscode-port
